More spacing issues.

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -827,6 +827,7 @@ input[type=checkbox].checkboxCC {
 
 input[type=checkbox].checkboxCC + label.labelCC {
 	padding-left:30px;
+	padding-bottom: 30px;
 	height:25px; 
 	display:inline-block;
 	line-height:25px;
@@ -842,7 +843,6 @@ input[type=checkbox].checkboxCC:checked + label.labelCC {
 }
 
 label.labelCC {
-	padding-bottom: 20px;
 	background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_cc296ad587ae0b3cd1df9e447306aa57.png);
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
